Fix font-weight and color properties in styles.css

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,8 @@ body{
     padding: 1px;
     width: 110px;
     text-align: center;
+    font-weight : 20px;
+    color: red;
 }
 
 #confidential {
